1.3 beta 1
- Intensive code refactoring and cleanup
- Improve rendering of short notes in tablature view
- Improve selection to preview which notes are included
- Performance (fluidity/responsivity) improvements
- Fixed glitches in software rendering mode

===================================================================================================

1.2.4.1
- Fixed crash when using track backgrounds

1.2.4
- Fixed song length when importing MIDIs with multiple time signatures
- Added support for horizontal mouse wheel scrolling (wxWidgets 2.9.1+ only)
- Fixed rare bug that could cause tracks to have an incorrect instrument name when importing a MIDI
- Provide graphical warnings when a MIDI file cannot be perfectly loaded
- Fixed rare printing crash
- Fixed problems with silences when printing scores with uneven chords
- Fixed not staying centered when zooming with ctrl+mouse wheel
- Fixed "rearrange notes" feature in tablature editor, which had accidentally been disabled
- Fixed issues in score editor with stem for some notes being sometimes up, sometimes down
- Speedups in printing code
- Don't exit when save dialog is cancelled
- Code cleanup and unit tests

1.2.3
- Added metronome feature
- Fixed extra silence being inserted at end of exported midi file, preventing looping
- Fixed glitch with drum name when loading .aria file
- Fixed keyboard focus not brought back to main pane after showing "Select Notes" dialog
- Fixed clicking on track header of drum editor unselects notes
- Fixed measures appearing unselected when right-clicking on them
- Fixed printing bug where notes appeared in the wrong measure
- Fixed wrong time sig change being selected after adding a time sig effect
- Fixed Shift+left/Shift+right when multiple time sig changes are used
- More code cleanup

1.2.2
- Support for custom keys (e.g. for street organs)
    - Added ability to save user-defined key presets
    - Support for disabling notes (e.g. if your instrument cannot play all notes)